# resumizer

./: INITIAL.md
backend/: .gitignore  ai_service.py  database.py  formatters.py  main.py  models.py  prompts.yaml  pyproject.toml  schemas.py  utils.py
frontend/: .pnp.cjs  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts  markdownUtils.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx  ResumeEditor.tsx
